fixed: selecting their viewer side during upload
